--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,7 @@
 {% set name = "PyInstaller" %}
+# NOTE: the test step triggers antivirus stuff.  Let IT know that you're building a new pyinstaller release,
+#    and that they should watch for hello.exe triggering alerts.  Windows jobs in particular will fail with
+#    what looks like a permission error.
 {% set version = "3.6" %}
 {% set sha256 = "3730fa80d088f8bb7084d32480eb87cbb4ddb64123363763cf8f2a1378c1c4b7" %}
 
@@ -14,8 +17,7 @@ source:
     - 0001-depend-bindepend-find-statically-linked-libraries.patch
 
 build:
-  number: 0
-  skip: True  # [osx]
+  number: 2
   entry_points:
     - pyinstaller = PyInstaller.__main__:run
     - pyi-archive_viewer = PyInstaller.utils.cliutils.archive_viewer:run
@@ -38,11 +40,11 @@ requirements:
     - {{ compiler("c") }}
     - pip
     - python
-    - setuptools
+    - setuptools  <45.0
   host:
     - pip
     - python
-    - setuptools
+    - setuptools   <45.0
     - waf
     - zlib
 
@@ -50,11 +52,13 @@ requirements:
     - altgraph
     - python
     - pefile >=2017.9.3  # [win]
-    - pycrypto
+    - pycryptodome
     - pywin32  # [win]
     - pywin32-ctypes  # [win]
     - dis3  # [py27]
     - macholib >=1.8
+  run_constrained:
+    - setuptools  <45.0
 
 test:
   imports:
