--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,7 +19,7 @@ source:
     - 0003-hooks-Update-pkg_resources-hook-for-setuptools-v45.0.patch
 
 build:
-  number: 2
+  number: 3
   entry_points:
     - pyinstaller = PyInstaller.__main__:run
     - pyi-archive_viewer = PyInstaller.utils.cliutils.archive_viewer:run
@@ -39,6 +39,9 @@ build:
     - popd
     - "{{ PYTHON }} -m pip install . --no-deps -vv"
   preserve_egg_dir: True
+  ignore_run_exports:  # [win]
+    - vc  # [win]
+    - vs2015_runtime  # [win]
 
 requirements:
   build:
@@ -46,12 +49,15 @@ requirements:
     - pip
     - python
     - setuptools
+    - m2-patch  # [win]
+    - m2-gcc-libs  # [win]
+    - patch  # [not win]
   host:
     - pip
     - python
     - setuptools
     - waf
-    - zlib
+    - zlib  # [not win]
 
   run:
     - altgraph
@@ -94,3 +100,4 @@ extra:
     - nicoddemus
     - hadim
     - nehaljwani
+    - mingwandroid
