--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,9 +1,9 @@
-{% set name = "PyInstaller" %}
+{% set name = "pyinstaller" %}
 # NOTE: the test step triggers antivirus stuff.  Let IT know that you're building a new pyinstaller release,
 #    and that they should watch for hello.exe triggering alerts.  Windows jobs in particular will fail with
 #    what looks like a permission error.
-{% set version = "3.6" %}
-{% set sha256 = "3730fa80d088f8bb7084d32480eb87cbb4ddb64123363763cf8f2a1378c1c4b7" %}
+{% set version = "4.0" %}
+{% set sha256 = "970beb07115761d5e4ec317c1351b712fd90ae7f23994db914c633281f99bab0" %}
 
 package:
   name: {{ name.lower() }}
@@ -15,12 +15,13 @@ source:
   sha256: {{ sha256 }}
   patches:
     - 0001-depend-bindepend-find-statically-linked-libraries.patch
-    - 0002-Bootloader-build-Fallback-to-a-default-min-macOS-ver.patch
+    - 0002-Bootloader-build-Fallback-to-a-default-min-macOS-ver.patch  # [osx]
     - 0003-hooks-Update-pkg_resources-hook-for-setuptools-v45.0.patch
     - 0004-Python-3.8-multiprocessing.resource_tracker-fix.patch
 
 build:
-  number: 5
+  number: 0
+  skip: True  # [py<35 or py>38]
   entry_points:
     - pyinstaller = PyInstaller.__main__:run
     - pyi-archive_viewer = PyInstaller.utils.cliutils.archive_viewer:run
@@ -63,12 +64,11 @@ requirements:
   run:
     - altgraph
     - python
-    - pefile >=2017.9.3  # [win]
-    - pycryptodome
-    - pywin32  # [win]
-    - pywin32-ctypes  # [win]
-    - dis3  # [py27]
+    - pefile >=2017.9.3        # [win]
+    - pywin32                  # [win]
+    - pywin32-ctypes >=0.2.0   # [win]
     - macholib >=1.8
+    - pyinstaller-hooks-contrib >=2020.6
 
 test:
   imports:
@@ -90,7 +90,7 @@ test:
 about:
   home: http://www.pyinstaller.org
   # https://github.com/pyinstaller/pyinstaller/blob/v3.6/COPYING.txt#L11
-  license: GPL-2.0-or-later
+  license: GPL-2.0-or-later WITH Bootloader-exception
   license_family: GPL
   license_file: COPYING.txt
   summary: PyInstaller bundles a Python application and all its dependencies into a single package.
