add binutils test dependency on linux-aarch64

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -72,6 +72,9 @@ requirements:
     - importlib-metadata >=0.8  # [py<38]
 
 test:
+  requires:
+    - binutils      [linux and aarch64]
+
   imports:
     - PyInstaller
 
