--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -2,21 +2,16 @@
 # NOTE: the test step triggers antivirus stuff.  Let IT know that you're building a new pyinstaller release,
 #    and that they should watch for hello.exe triggering alerts.  Windows jobs in particular will fail with
 #    what looks like a permission error.
-{% set version = "4.8" %}
-{% set sha256 = "7ae868bbcc502832a2c802c84a1dbb9f48b44445c50144c29bfcd7b760140e13" %}
+{% set version = "5.6.2" %}
+{% set sha256 = "865025b6809d777bb0f66d8f8ab50cc97dc3dbe0ff09a1ef1f2fd646432714fc" %}
 
 package:
-  name: {{ name.lower() }}
+  name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: pyinstaller-{{ version }}.tar.gz
-  url: https://files.pythonhosted.org/packages/7f/6b/688fceb8f1fafeb028de72ad47c5b1377be9f74a75801802f1463e451b22/pyinstaller-4.8.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
-  patches:
-    - 0001-depend-bindepend-find-statically-linked-libraries.patch
-    - 0002-Bootloader-build-Fallback-to-a-default-min-macOS-ver.patch
-    - 0003-hooks-Update-pkg_resources-hook-for-setuptools-v45.0.patch
 
 build:
   number: 0
@@ -28,10 +23,14 @@ build:
     - pyi-makespec = PyInstaller.utils.cliutils.makespec:run
     - pyi-set_version = PyInstaller.utils.cliutils.set_version:run
   script:
+    - export PYI_STATIC_ZLIB=1  # [unix]
     - export LDFLAGS="${LDFLAGS} -L${PREFIX}/lib"               # [unix]
-    - export LDFLAGS="${LDFLAGS} -mmacosx-version-min=${macos_min_version}"  # [osx]
     # Remove the pre-compiled bootloaders (available in sdist)
     - rm -fr ${SRC_DIR}/PyInstaller/bootloader/{Darwin,Linux,Windows}-{64,32}bit  # [unix]
+    # Remove vendored waflib dir
+    - rm -fr ${SRC_DIR}/bootloader/waflib   # [unix]
+    - rd /s /q %SRC_DIR%\bootloader\waflib  # [win]
+    # Build the bootloader
     - pushd bootloader
     - waf --prefix="${PREFIX}" --target-arch=64bit --clang distclean all  # [osx]
     - waf --prefix="${PREFIX}" --gcc --no-lsb distclean all     # [linux]
@@ -39,9 +38,6 @@ build:
     - popd
     - "{{ PYTHON }} -m pip install . --no-deps -vv"
   preserve_egg_dir: True
-  ignore_run_exports:  # [win]
-    - vc  # [win]
-    - vs2015_runtime  # [win]
 
 requirements:
   build:
@@ -50,7 +46,6 @@ requirements:
     - python
     - setuptools
     - m2-patch  # [win]
-    - m2-gcc-libs  # [win]
     - patch  # [not win]
 
   host:
@@ -59,29 +54,21 @@ requirements:
     - setuptools
     - wheel
     - waf
-    - zlib  # [not win]
+    - zlib
 
   run:
     - altgraph
     - python
-    - pefile >=2017.9.3  # [win]
-    - pycryptodome
+    - pefile >=2022.5.30  # [win]
     - pywin32  # [win]
     - pywin32-ctypes  # [win]
-    - dis3  # [py27]
     - macholib >=1.8
-    - setuptools
+    - setuptools    # due to pkg_resources import
     - importlib-metadata >=0.8  # [py<38]
 
 test:
-  requires:
-    # The test requires objdump which is part of the binutils package.
-    # Maybe add this as a test dependency on all platforms?
-    - binutils      [linux and aarch64]
-
   imports:
     - PyInstaller
-
   commands:
     - pyinstaller --help
     - pyi-archive_viewer --help
