--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -82,11 +82,13 @@ test:
     - multiprocessing_test.py
 
 about:
-  home: http://www.pyinstaller.org
+  home: https://pyinstaller.org
   license: GPL-2.0-or-later
   license_family: GPL
   license_file: COPYING.txt
   summary: PyInstaller bundles a Python application and all its dependencies into a single package.
+  dev_url: https://github.com/pyinstaller/pyinstaller
+  doc_url: https://pyinstaller.org
 
 extra:
   recipe-maintainers:
