--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -58,10 +58,11 @@ requirements:
     - altgraph
     - python
     - pefile >=2022.5.30  # [win]
+    - pyinstaller-hooks-contrib >=2021.4
     - pywin32  # [win]
     - pywin32-ctypes  # [win]
-    - macholib >=1.8
-    - setuptools    # due to pkg_resources import
+    - macholib >=1.8  # [osx]
+    - setuptools >= 42.0.0  # due to pkg_resources import
     - importlib-metadata >=0.8  # [py<38]
 
 test:
