Add pip to test requirements

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -67,6 +67,8 @@ requirements:
 test:
   imports:
     - PyInstaller
+  requires:
+    - pip
   files:
     - hello.py
     - multiprocessing_test.py
