--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -44,7 +44,7 @@ build:
 requirements:
   build:
     - {{ compiler("c") }}
-    - {{ stdlib("c") }}
+#    - {{ stdlib("c") }}
     - cross-python_{{ target_platform }}  # [build_platform != target_platform]
     - pip
     - python
