--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -61,8 +61,8 @@ requirements:
     - altgraph
     - packaging >=22.0
     - python
-#    - pefile >=2022.5.30      # [win]
-    - pefile >2019.4.18       # [win]
+    - pefile >=2022.5.30      # [win]
+#    - pefile >2019.4.18       # [win]
     - pywin32                 # [win]
     - pywin32-ctypes >=0.2.1  # [win]
     - macholib >=1.8  # [osx]
