--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -106,6 +106,7 @@ extra:
     reason: Update to a newer version
     recipe-maintainers:
       - ianaobi
+      - bkreider
   recipe-maintainers:
     - isuruf
     - jakirkham
