--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ build:
   number: 0
   skip: True  # [py<38 and py>313]
   entry_points:
-    - pyinstaller = PyInstaller.__main__:run
+    - pyinstaller = PyInstaller.__main__:_console_script_run
     - pyi-archive_viewer = PyInstaller.utils.cliutils.archive_viewer:run
     - pyi-bindepend = PyInstaller.utils.cliutils.bindepend:run
     - pyi-grab_version = PyInstaller.utils.cliutils.grab_version:run
