--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -88,7 +88,7 @@ about:
   doc_url: https://pyinstaller.org
 
 extra:
-  skip_lints:
+  skip-lints:
     - python_build_tool_in_run
     - host_section_needs_exact_pinnings
   recipe-maintainers:
