--- a/abs.yaml
+++ b/abs.yaml
@@ -1,2 +1,5 @@
+build_env_vars:
+  ANACONDA_ROCKET_ENABLE_PY313 : yes
+
 channels:
   - https://staging.continuum.io/prefect/fs/pyinstaller-hooks-contrib-feedstock/pr4/726bfbb
