--- a/abs.yaml
+++ b/abs.yaml
@@ -1,8 +1,7 @@
 build_env_vars:
   ANACONDA_ROCKET_ENABLE_PY313 : yes
 
-channels:
-  - https://staging.continuum.io/prefect/fs/pyinstaller-hooks-contrib-feedstock/pr4/726bfbb
-
+# Turned off to address exe used for bootstrapping found in
+# https://anaconda.atlassian.net/browse/SIR-1430
 content_signing:
   win-64: False
